--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@ body, html {
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/linuxinfo">Linux Introduction</a>
-      <a href="http://linuxhero.tk/linuxdistros">Linux Distributions</a> 
-      <a href="http://linuxhero.tk/linuxcommands">Linux Commands</a>        
+       <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
+      <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+       <a href="http://linuxhero.tk/nfs/">Configure NFS Server</a>
+       <a href="http://linuxhero.tk/iscsi/">Configure NFS Server</a>
+       
      </div>
     </div> 
    <div class="dropdown">
