--- a/nfs/index.html
+++ b/nfs/index.html
@@ -84,6 +84,7 @@ body, html {
       <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
        <a href="http://linuxhero.tk/nfs/">Configure NFS Server</a>
+       <a href="http://linuxhero.tk/iscsi/">Configure iSCSI Storage Server</a>
       
      </div>
     </div> 
@@ -126,7 +127,7 @@ body, html {
 
 
 <!-- Add a background color and large text to the whole page -->
-<div class="w3-sand w3-grayscale w3-large">
+<div class="w3-sand w3-coralscale w3-large">
      
 <!-- Content -->
 <div style="max-width:1200px">
