--- a/iscsi/index.html
+++ b/iscsi/index.html
@@ -127,7 +127,7 @@ body, html {
 
 
 <!-- Add a background color and large text to the whole page -->
-<div class="w3-sand w3-greenscale w3-large">
+<div class="w3-sand w3-bluescale w3-large">
      
 <!-- Content -->
 <div style="max-width:1200px">
