--- a/iscsi/index.html
+++ b/iscsi/index.html
@@ -83,6 +83,7 @@ body, html {
      <div class="dropdown-content">
       <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+       <a href="http://linuxhero.tk/linuxcommands/">Linux Commands</a>
        <a href="http://linuxhero.tk/nfs/">Configure NFS Server</a>
        <a href="http://linuxhero.tk/iscsi/">Configure iSCSI Storage Server</a>
       
@@ -127,7 +128,7 @@ body, html {
 
 
 <!-- Add a background color and large text to the whole page -->
-<div class="w3-sand w3-bluescale w3-large">
+<div class="w3-sand w3-greenscale w3-large">
      
 <!-- Content -->
 <div style="max-width:1200px">
