--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ body, html {
      <div class="dropdown-content">
        <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+       <a href="http://linuxhero.tk/ntp/">Configure NTP</a>
        <a href="http://linuxhero.tk/nfs/">Configure NFS Server</a>
        <a href="http://linuxhero.tk/iscsi/">Configure NFS Server</a>
        
