--- a/ntp/index.html
+++ b/ntp/index.html
@@ -127,7 +127,7 @@ body, html {
 
 
 <!-- Add a background color and large text to the whole page -->
-<div class="w3-sand w3-indianredscale w3-large">
+<div class="w3-green w3-scale w3-large">
      
 <!-- Content -->
 <div style="max-width:1200px">
@@ -184,7 +184,6 @@ Install NTPd and Configure NTP server for time adjustment.<b><p>
 <br>[root@<br>server ~]# systemctl enable ntpd
  </span></h5> 
 
-   
 <!-- Menu Container -->
 
 
