--- a/ntp/index.html
+++ b/ntp/index.html
@@ -129,7 +129,14 @@ body, html {
 
 
 <!-- Add a background color and large text to the whole page -->
-<div class="w3-brown w3-scale w3-large">
+<div class="w3-gra
+            <h4>Nature</h4>
+    <p>What a beautiful sunrise</p>
+  </div>
+   </div>y w3-scale w3-large">
+ <div class="container">
+  <img src="background.jpg" alt="Nature" style="width:100%;">
+  <div class="text-block">
      
 <!-- Content -->
 <div style="max-width:1200px">
