--- a/ntp/index.html
+++ b/ntp/index.html
@@ -135,7 +135,7 @@ body, html {
   </div>
    </div>y w3-scale w3-large">
  <div class="container">
-  <img src="Background.jpg" alt="Nature" style="width:100%;">
+  <img src="Background.jpg" alt="Nature" style="width:100%, height:30%;">
      
 <!-- Content -->
 <div style="max-width:1200px">
