--- a/ntp/index.html
+++ b/ntp/index.html
@@ -129,13 +129,7 @@ body, html {
 
 
 <!-- Add a background color and large text to the whole page -->
-<div class="w3-gra
-            <h4>Nature</h4>
-    <p>What a beautiful sunrise</p>
-  </div>
-   </div>y w3-scale w3-large">
- <div class="container">
-  <img src="Background.jpg" alt="Nature" style="width:100%, height:30%;">
+<div class="w3-orange w3-scale w3-large">
      
 <!-- Content -->
 <div style="max-width:1200px">
