--- a/ntp/index.html
+++ b/ntp/index.html
@@ -130,6 +130,7 @@ body, html {
 
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-orange w3-scale w3-large">
+  <img src="/programming.gif" alt="Computer man" style="width:48px;height:48px;">
      
 <!-- Content -->
 <div style="max-width:1200px">
