--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body, html {
        <a href="http://linuxhero.tk/ssh/">Configure SSH</a>
        <a href="http://linuxhero.tk/nfs/">Configure NFS</a>
        <a href="http://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
-       
+        <a href="http://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
      </div>
     </div> 
    <div class="dropdown">
