--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body, html {
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">About Me</span></h5>
-    <img src="/hero.jpg" style="width:40%;max-width:500px" class="w3-margin-center">
+    <img src="/Paint2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
     <p>In addition to install and configure solutions, implement reusable components, translate technical requirements, assist with all stages of test data, develop interface stubs and simulators and perform script maintenance and updates.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
