--- a/iscsi/index.html
+++ b/iscsi/index.html
@@ -81,11 +81,14 @@ body, html {
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
-      <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+       <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
+       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
        <a href="http://linuxhero.tk/linuxcommands/">Linux Commands</a>
-       <a href="http://linuxhero.tk/nfs/">Configure NFS Server</a>
-       <a href="http://linuxhero.tk/iscsi/">Configure iSCSI Storage Server</a>
+       <a href="http://linuxhero.tk/ntp/">Configure NTP</a>
+       <a href="http://linuxhero.tk/ssh/">Configure SSH</a>
+       <a href="http://linuxhero.tk/nfs/">Configure NFS</a>
+       <a href="http://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
+        <a href="http://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
       
      </div>
     </div> 
@@ -128,8 +131,8 @@ body, html {
 
 
 <!-- Add a background color and large text to the whole page -->
-<div class="w3-sand w3-greenscale w3-large">
-     
+<div class="w3-orange w3-scale w3-large">
+     <img src="programming.gif" alt="Computer man" style="width:100px;height:100px;">
 <!-- Content -->
 <div style="max-width:1200px">
 
