--- a/linuxcommands/index.html
+++ b/linuxcommands/index.html
@@ -81,10 +81,14 @@ body, html {
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
-      <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
-      <a href="http://linuxhero.tk/linuxcommands/">Linux Commands</a>
-      <a href="#">Link 3</a>
+     <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
+       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+       <a href="http://linuxhero.tk/linuxcommands/">Linux Commands</a>
+       <a href="http://linuxhero.tk/ntp/">Configure NTP</a>
+       <a href="http://linuxhero.tk/ssh/">Configure SSH</a>
+       <a href="http://linuxhero.tk/nfs/">Configure NFS</a>
+       <a href="http://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
+        <a href="http://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
      </div>
     </div> 
    <div class="dropdown">
