--- a/iscsi/index.html
+++ b/iscsi/index.html
@@ -132,13 +132,13 @@ body, html {
 
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-orange w3-scale w3-large">
-     <img src="programming.gif" alt="Computer man" style="width:100px;height:100px;">
+     <img src="/programming.gif" alt="Computer man" style="width:100px;height:100px;">
 <!-- Content -->
 <div style="max-width:1200px">
 
   <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">	
-Configure iSCSI Target (Targetcli)</span></h5>
+Configure iSCSI Target</span></h5>
     <p><b>Configure Storage Server with iSCSI.<b><p>
   <h5 <span class="w3-tag w3-red">[iSCSI Target] |192.0.0.20 ---------------- 192.0.0.30|  [iSCSI Initiator] <br>Server.example.com  <--------------------->  Client.example.com</span></h5>
   <p><b>Configure iSCSI Target:-<b><p>
