--- a/ntp/index.html
+++ b/ntp/index.html
@@ -138,13 +138,13 @@ body, html {
 
   <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">	
-Configure NTP Server (Targetcli)</span></h5>
+Configure NTP Server</span></h5>
     <p><b>	
 Install NTPd and Configure NTP server for time adjustment.<b><p>
   <h5 <span class="w3-tag w3-red">[NTPd Server] |192.0.0.20 ---------------- 192.0.0.30|  [NTPd Client] <br>Server.example.com  <--------------------->  Client.example.com</span></h5>
   <p><b>Server Configuration:-<b><p>
 <h5><span class="w3-code w3-black">[root@<br>server ~]# yum -y install ntp
-<br>[root@<br>server ~]# vi /etc/ntp.conf
+<br>[root@server ~]# vi /etc/ntp.conf
 <br>restrict default kod nomodify notrap nopeer noquery
 <br>restrict -6 default kod nomodify notrap nopeer noquery
 <br>restrict 127.0.0.1
