--- a/ssh/index.html
+++ b/ssh/index.html
@@ -132,7 +132,7 @@ body, html {
 
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-orange w3-scale w3-large">
-     <img src="programming.gif" alt="Computer man" style="width:100px;height:100px;">
+     <img src="/programming.gif" alt="Computer man" style="width:100px;height:100px;">
 <!-- Content -->
 <div style="max-width:1200px">
 
