--- a/index.html
+++ b/index.html
@@ -216,5 +216,6 @@ function openMenu(evt, menuName) {
 }
 document.getElementById("myLink").click();
 </script>
+  <script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/cc36042b476f39dfc5e1c05a0b8b0928bb3214d12771cb1139f9387b5e219112.js"></script>
 </body>
 </html>
