--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ function openMenu(evt, menuName) {
     tablinks[i].className = tablinks[i].className.replace(" w3-black", "");
   }
   document.getElementById(menuName).style.display = "block";
-  evt.currentTarget.firstElementChild.className += " w3-dark-black";
+  evt.currentTarget.firstElementChild.className += " w3-black";
 }
 document.getElementById("myLink").click();
 </script>
