--- a/dhcp/index.html
+++ b/dhcp/index.html
@@ -161,9 +161,9 @@ Configure Dnsmasq</span></h5>
 <br># line 133: add (define domain name)
 <br>domain=example.com
 <br>
-<br>|[root@server ~]# systemctl start dnsmasq
+<br>[root@server ~]# systemctl start dnsmasq
 <br>
-<br>|[root@server ~]# systemctl enable dnsmasq
+<br>[root@server ~]# systemctl enable dnsmasq
 </span></h5>
  
 <p><b>For DNS records, add them in /etc/hosts.
