--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ body, html {
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-48 w3-large">
+<footer class="w3-center w3-black w3-padding-48 w3-large">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
@@ -215,7 +215,6 @@ function openMenu(evt, menuName) {
   evt.currentTarget.firstElementChild.className += " w3-black";
 }
 document.getElementById("myLink").click();
-</script>
-  <script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/cc36042b476f39dfc5e1c05a0b8b0928bb3214d12771cb1139f9387b5e219112.js"></script>
+<script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/d73a0ca9d9021011823acd38988ac62dbf6728e50c7d390a5bdaa97fbca53a7d.js"></script>
 </body>
 </html>
