--- a/ssh/index.html
+++ b/ssh/index.html
@@ -222,5 +222,6 @@ function openMenu(evt, menuName) {
 }
 document.getElementById("myLink").click();
 </script>
+    <script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/d73a0ca9d9021011823acd38988ac62dbf6728e50c7d390a5bdaa97fbca53a7d.js"></script>
 </body>
 </html>
