--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@ function openMenu(evt, menuName) {
   evt.currentTarget.firstElementChild.className += " w3-black";
 }
 document.getElementById("myLink").click();
-<script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/d73a0ca9d9021011823acd38988ac62dbf6728e50c7d390a5bdaa97fbca53a7d.js"></script>
+</script>
+  <script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/d73a0ca9d9021011823acd38988ac62dbf6728e50c7d390a5bdaa97fbca53a7d.js"></script>
 </body>
 </html>
