--- a/ftp/index.html
+++ b/ftp/index.html
@@ -81,15 +81,15 @@ body, html {
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
-       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
-       <a href="http://linuxhero.tk/linuxcommands/">Linux Commands</a>
-       <a href="http://linuxhero.tk/ntp/">Configure NTP</a>
-       <a href="http://linuxhero.tk/ssh/">Configure SSH</a>
-       <a href="http://linuxhero.tk/nfs/">Configure NFS</a>
-       <a href="http://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
-        <a href="http://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
-         <a href="http://linuxhero.tk/ftp/">Configure FTP Server</a>
+      <a href="https://linuxhero.tk/linuxinfo/">Linux Introduction</a>
+       <a href="https://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+       <a href="https://linuxhero.tk/linuxcommands/">Linux Commands</a>
+       <a href="https://linuxhero.tk/ntp/">Configure NTP</a>
+       <a href="https://linuxhero.tk/ssh/">Configure SSH</a>
+       <a href="https://linuxhero.tk/nfs/">Configure NFS</a>
+       <a href="https://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
+        <a href="https://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
+         <a href="https://linuxhero.tk/ftp/">Configure FTP Server</a>
       
      </div>
     </div> 
@@ -182,9 +182,10 @@ FTP SERVER</span></h5>
 By default, root user is not allowed to login to ftp server for security purpose. So,  Create a normal user<b><p>
 <h5><span class="w3-code w3-black"> [root@server ~]# useradd sam
 <br>[root@server ~]# passwd sam
+  </span></h5>
 <br>
 <p><b>Client side configuration:-<b><p>
-<p>Try to log in to the FTP server with user sam<p>
+<p><b>Try to log in to the FTP server with user sam<b><p>
 <h5><span class="w3-code w3-black">[root@client ~]# ftp 192.0.0.20
 </span></h5> 
 
@@ -192,7 +193,7 @@ By default, root user is not allowed to login to ftp server for security purpose
 
 <div class="w3-container" id="contact">
     <h2>Please email me if you face any issue.</h2>
-    <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
+    <form action="mailto:Allishah2490@gmail.com" method="get" enctype="text/plain">
       <p><strong>Name: <input type="text" name="name"/></p>
       <p><strong>Email: <input type="text" name="email"/></p>
       <p><strong>Comments:
