--- a/ssh/index.html
+++ b/ssh/index.html
@@ -81,14 +81,15 @@ body, html {
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
-       <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
-       <a href="http://linuxhero.tk/linuxcommands/">Linux Commands</a>
-       <a href="http://linuxhero.tk/ntp/">Configure NTP</a>
-       <a href="http://linuxhero.tk/ssh/">Configure SSH</a>
-       <a href="http://linuxhero.tk/nfs/">Configure NFS</a>
-       <a href="http://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
-        <a href="http://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
+   <a href="https://linuxhero.tk/linuxinfo/">Linux Introduction</a>
+       <a href="https://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+       <a href="https://linuxhero.tk/linuxcommands/">Linux Commands</a>
+       <a href="https://linuxhero.tk/ntp/">Configure NTP</a>
+       <a href="https://linuxhero.tk/ssh/">Configure SSH</a>
+       <a href="https://linuxhero.tk/nfs/">Configure NFS</a>
+       <a href="https://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
+        <a href="https://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
+         <a href="https://linuxhero.tk/ftp/">Configure FTP Server</a>
       
      </div>
     </div> 
