--- a/index.html
+++ b/index.html
@@ -198,6 +198,13 @@ body, html {
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-48 w3-large">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+<body>
+
+<div class="list-group">
+  <a class="fa fa-linkedin" style="font-size:48px;color:blue" href="https://www.facebook.com"></a>
+</div>
+</body>
+  
 </footer>
 
 <script>
@@ -219,14 +226,7 @@ document.getElementById("myLink").click();
 </script>
   <script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/d73a0ca9d9021011823acd38988ac62dbf6728e50c7d390a5bdaa97fbca53a7d.js"></script>
 
-<body>
 
-<div class="list-group">
-  <a class="fa fa-linkedin" style="font-size:48px;color:red" href="https://www.facebook.com"></a>
-</div>
-
-
-</body>
  
 </body>
 </html>
