--- a/index.html
+++ b/index.html
@@ -164,9 +164,14 @@ body, html {
     <p>In addition to install and configure solutions, implement reusable components, translate technical requirements, assist with all stages of test data, develop interface stubs and simulators and perform script maintenance and updates.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"If you have knowledge, let others light their candles in it." ~ Margaret Fuller</i></p>
+    <body>
+   <div class="list-group">
+     <a class="fa fa-linkedin-square" style="font-size:48px;color:blue" href="https://www.facebook.com"></a>
     </div>
+     </body>
   </div>
-</div>
+ </div>
+ </div>
 
 <!-- Menu Container -->
 
