--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ body, html {
        <a href="http://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
         <a href="http://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
        <a href="http://linuxhero.tk/ftp/">Configure FTP Server</a>
+       <a href="http://linuxhero.tk/lvm/">Configure LVM</a>
      </div>
     </div> 
    <div class="dropdown">
