--- a/lvm/index.html
+++ b/lvm/index.html
@@ -141,7 +141,7 @@ body, html {
   <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">	
 Configure LVM on Centos7</span></h5>
-  <p>Manage physical Volumes:<p>
+  <p><b>Manage physical Volumes:<b><p>
   <p>	
 This is the basic operation of managing physical  Volumes.<p>
   <p><b>Create physical  Volume:-<b><p>
@@ -203,9 +203,7 @@ This is the basic operation of managing physical  Volumes.<p>
 
 <p><b>Change Volume Group's name<b><p>
     
-<h5><span class="w3-code w3-black">
-
-<br>[root@server ~]# vgrename vg_dlp vg_example
+<h5><span class="w3-code w3-black">[root@server ~]# vgrename vg_dlp vg_example
 <br>Volume group "vg_srv" successfully renamed to "vg_example" vgdisplay
   
 <br>
