--- a/Analyzebottlenecks/index.html
+++ b/Analyzebottlenecks/index.html
@@ -144,15 +144,15 @@ body, html {
     
     <p> We will explain how to find a performance problem that might be affecting one of your servers. We
 outline a series of steps to lead you to a concrete solution that you can implement to restore the server to an
-acceptable performance level.
-<br><b>Below the topics will be covered:<b>
-<br>- CPU bottlenecks
+acceptable performance level.<p>
+<p><b>Below the topics will be covered:<b></p>
+<p>- CPU bottlenecks
 <br>- Memory bottlenecks
 <br>- Disk bottelnecks
-<br>- Network bottlenecks 
-
-<p>The following steps are used as our quick tuning strategy:
-<br>1. Know your system.
+<br>- Network bottlenecks <p>
+<br>
+<p><b>The following steps are used as our quick tuning strategy:<b></p>
+<p>1. Know your system.
 <br>2. Back up the system.
 <br>3. Monitor and analyze the system’s performance.
 <br>4. Narrow down the bottleneck and find its cause.
