--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ body, html {
      </button>
      <div class="dropdown-content">
       <a href="https://linuxhero.tk/Analyzebottlenecks/">Steps To Analyze Linux Performance Bottlenecks</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
+      <a href="https://linuxhero.tk/cpubottlenecks/">CPU Bottlenecks</a>
       <a href="#">Link 3</a>
      </div>
     </div>
@@ -116,7 +116,7 @@ body, html {
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
+      <a href="https://linuxhero.tk/webapp/">What is devops?</a>
       <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
       <a href="#">Link 3</a>
     </div>
